MDEV-22530: Aborting OPTIMIZE TABLE still logs in binary log and replicates to the Slave server.

Fix:
Consider kill command as fatal_error and goto error handling code.